[project]
name = "mfi_ddb"
version = "1.0.0"
description = "MFI DDB: Python library for streaming data"
readme = "README.md"
requires-python = ">=3.8,<3.13"
maintainers = [
    { name="Shobhit Aggarwal", email="shobhit@cmu.edu" },
    { name="Stephanie Steren-Ruta", email="ssterenr@andrew.cmu.edu" }
]
license = "BSD-3-Clause"
dependencies = [
    "cmake>=4.0.3",
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "numpy>=1.24.4",
    "omegaconf>=2.3.0",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "paho-mqtt>=2.1.0",
    "pandas>=2.0.3",
    "ping3>=4.0.8",
    "protobuf>=5.29.5",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rospkg>=1.6.0",
    "setuptools>=75.3.2",
    "watchdog>=4.0.2",
    "wheel>=0.45.1",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
